--- a/.github/workflows/Release .yml
+++ b/.github/workflows/Release .yml
@@ -50,6 +50,6 @@ jobs:
         run: npm install --Force 
       - name: Release
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN  }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN  }}
         run: npm exec semantic-release
