--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.parallel = true
 org.gradle.caching = true
 kotlin.code.style = official
-version = 4.16.1
+version = 5.0.0
+GITHUB_TOKEN = ${{ secrets.GH_TOKEN  }}
